# x0x-compute

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.github/workflows/: ci.yml
docs/: architecture.md
examples/: config.toml
src/: capability.rs  config.rs  daemon.rs  error.rs  lib.rs  mesh.rs  runtime.rs  x0x_identity.rs
